--- a/wiki.html
+++ b/wiki.html
@@ -1,411 +1,80 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DeadPoly Community Hub — Wiki</title>
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7LNZHQMM"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-GD7LNZHQMM');
-  </script>
-
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>DeadPoly Hub — Wiki</title>
   <style>
     :root{
       --bg:#0b0b0f;
-      --panel:#14141b;
-      --panel2:#101016;
+      --panel:#12121a;
+      --panel2:#0f0f16;
+      --line:#2a2a36;
       --text:#f2f2f2;
       --muted:#b7b7c2;
-      --line:#2a2a36;
       --btn:#1c1c26;
-      --btnHover:#242434;
-      --glow: rgba(120,140,255,.18);
-      --cardGlow: rgba(255,255,255,.05);
+      --btnHover:#262638;
+      --card:rgba(255,255,255,.03);
     }
-    html,body{
-      height:100%; margin:0;
-      background:radial-gradient(900px 520px at 40% 8%, var(--glow), transparent 55%), var(--bg);
-      color:var(--text);
-      font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-    }
-    a{color:inherit}
-
-    /* ===== Top Bar (shared) ===== */
-    .topbar{
-      position: sticky; top:0; z-index:1000;
-      display:grid;
-      grid-template-columns: 1fr auto 1fr;
-      align-items:center;
-      gap:12px;
-      padding:12px 16px;
-      background: rgba(10,10,10,.72);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid rgba(255,255,255,.08);
-    }
-    .topbar-title{
-      justify-self:center;
-      color:#cfcfcf;
-      font: 13px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      letter-spacing:.4px;
-      display:flex; gap:10px; align-items:center;
-    }
-    .topbar-left{justify-self:start; display:flex; gap:10px; align-items:center;}
-    .topbar-right{justify-self:end; display:flex; gap:10px; align-items:center;}
-    .btn{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      padding:7px 12px;
-      border-radius:10px;
-      text-decoration:none;
-      color:#e9e9e9;
-      background: rgba(255,255,255,.06);
-      border: 1px solid rgba(255,255,255,.10);
-      font: 12px/1 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      transition: transform .12s ease, background .12s ease;
-      user-select:none;
-      white-space:nowrap;
-    }
-    .btn:hover{ background: rgba(255,255,255,.10); transform: translateY(-1px); }
-    .btn:active{ transform: translateY(0px) scale(.99); }
-
-    /* ===== Layout ===== */
-    .wrap{
-      max-width: 1320px;
-      margin: 0 auto;
-      padding: 14px 14px 36px;
-      display:grid;
-      grid-template-columns: 320px 1fr;
-      gap:14px;
-    }
-    @media (max-width: 980px){
-      .wrap{grid-template-columns:1fr;}
-    }
-
-    .panel{
-      background: linear-gradient(180deg, rgba(255,255,255,.035), rgba(255,255,255,.01));
-      border: 1px solid rgba(255,255,255,.09);
-      border-radius: 18px;
-      box-shadow: 0 14px 44px rgba(0,0,0,.45);
-    }
-    .p-hd{
-      padding:14px 14px 10px;
-      border-bottom: 1px solid rgba(255,255,255,.08);
-    }
-    .p-hd h2{margin:0;font-size:14px;letter-spacing:.4px}
-    .p-hd .sub{margin-top:4px;color:var(--muted);font-size:12px}
-
-    /* ===== Left accordion ===== */
-    .acc{padding:10px}
-    .acc details{
-      border: 1px solid rgba(255,255,255,.08);
-      background: rgba(0,0,0,.22);
-      border-radius: 14px;
-      margin: 10px 0;
-      overflow:hidden;
-    }
-    .acc summary{
-      list-style:none;
-      cursor:pointer;
-      padding:12px 12px;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      font-weight:800;
-      letter-spacing:.2px;
-    }
-    .acc summary::-webkit-details-marker{display:none;}
-    .acc .acc-body{
-      padding: 0 12px 12px;
-      color:var(--muted);
-      font-size:12px;
-    }
-    .chiprow{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
-    .chip{
-      display:inline-flex; align-items:center; gap:6px;
-      padding:7px 10px;
-      border-radius:999px;
-      background: rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.10);
-      text-decoration:none;
-      color:#e9e9e9;
-      font-size:12px;
-      transition: background .12s ease, transform .12s ease;
-      user-select:none;
-      white-space:nowrap;
-    }
-    .chip:hover{background: rgba(255,255,255,.10); transform: translateY(-1px);}
-
-    /* ===== Main ===== */
-    .main{padding:14px; display:grid; gap:14px;}
-    .hero{
-      padding:16px;
-      border-radius:18px;
-      border:1px solid rgba(255,255,255,.10);
-      background:
-        radial-gradient(900px 500px at 10% 0%, rgba(90,110,255,.22), transparent 55%),
-        linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.015));
-      box-shadow: 0 18px 60px rgba(0,0,0,.48);
-    }
-    .hero h1{margin:0;font-size:22px;letter-spacing:.2px}
-    .hero p{margin:8px 0 0;color:var(--muted);max-width: 980px;font-size:12.5px}
-    .hero .row{display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-top:12px;}
-
-    .searchbar{
-      margin-top:12px;
-      display:flex;
-      gap:10px;
-      align-items:center;
-      flex-wrap:wrap;
-    }
-    .searchbar input{
-      flex:1; min-width: 260px;
-      background: rgba(0,0,0,.22);
-      border:1px solid rgba(255,255,255,.10);
-      border-radius: 12px;
-      padding:10px 12px;
-      color:var(--text);
-      outline:none;
-    }
-    .searchbar input:focus{
-      border-color: rgba(150,170,255,.35);
-      box-shadow: 0 0 0 3px rgba(120,140,255,.12);
-    }
-    .hint{color:var(--muted);font-size:12px}
-
-    .grid{
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap:12px;
-    }
-    .card{
-      padding:12px;
-      border-radius:16px;
-      border:1px solid rgba(255,255,255,.10);
-      background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));
-      position:relative;
-      overflow:hidden;
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-      min-height: 112px;
-    }
-    .card:before{
-      content:"";
-      position:absolute; inset:-2px;
-      background: radial-gradient(320px 120px at 10% 0%, var(--cardGlow), transparent 60%);
-      pointer-events:none;
-    }
-    .card h3{margin:0;font-size:14px;letter-spacing:.2px; position:relative; z-index:1;}
-    .card p{margin:0;color:var(--muted);font-size:12px; position:relative; z-index:1;}
-    .card .actions{display:flex;gap:8px;flex-wrap:wrap;margin-top:auto; position:relative; z-index:1;}
-    .smallbtn{
-      display:inline-flex;align-items:center;justify-content:center;
-      padding:7px 10px;border-radius:10px;
-      border:1px solid rgba(255,255,255,.10);
-      background: rgba(255,255,255,.06);
-      text-decoration:none;
-      font-size:12px;
-      transition: transform .12s ease, background .12s ease;
-      user-select:none;
-      white-space:nowrap;
-    }
-    .smallbtn:hover{background: rgba(255,255,255,.10); transform: translateY(-1px);}
-    .badge{
-      display:inline-flex;
-      padding:5px 9px;
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,.10);
-      background: rgba(0,0,0,.20);
-      color:#e9e9e9;
-      font-size:11px;
-      letter-spacing:.2px;
-    }
-
-    .sectionTitle{
-      display:flex; justify-content:space-between; align-items:flex-end;
-      gap:12px; flex-wrap:wrap;
-      padding: 0 2px;
-    }
-    .sectionTitle h2{margin:0;font-size:13px;letter-spacing:.35px}
-    .divider{height:1px;background: rgba(255,255,255,.08);margin: 4px 0 0;border-radius:999px;}
+    html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;}
+    a{color:inherit;text-decoration:none}
+    .topbar{position:sticky;top:0;z-index:999;background:linear-gradient(to bottom, rgba(10,10,14,.92), rgba(10,10,14,.7));backdrop-filter: blur(6px);border-bottom:1px solid var(--line);}
+    .topbar-inner{max-width:1150px;margin:0 auto;padding:10px 14px;display:flex;gap:10px;align-items:center;justify-content:space-between;}
+    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--btn);border:1px solid var(--line);padding:8px 10px;border-radius:10px;transition:background .12s ease, transform .08s ease;}
+    .btn:hover{background:var(--btnHover)}
+    .btn:active{transform:scale(.98)}
+    .wrap{max-width:1150px;margin:0 auto;padding:18px 14px 40px}
+    h1{margin:0;font-size:26px;letter-spacing:.3px}
+    .sub{margin:6px 0 0;color:var(--muted)}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:12px;margin-top:16px}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:16px;padding:14px;}
+    .card h2{margin:0 0 6px;font-size:16px}
+    .card p{margin:0;color:var(--muted)}
+    .arrow{float:right;opacity:.6}
+    .card:hover .arrow{opacity:1}
+    .pill{display:inline-block;margin-top:10px;padding:6px 10px;border-radius:999px;border:1px solid var(--line);background:var(--panel2);color:var(--muted);font-size:12px}
   </style>
 </head>
-
 <body>
-  <!-- TOP BAR -->
   <div class="topbar">
-    <div class="topbar-left">
+    <div class="topbar-inner">
       <a class="btn" href="index.html">← Menu</a>
-    </div>
-
-    <div class="topbar-title">
-      <strong>Wiki</strong>
-      <span style="opacity:.65">Community Hub</span>
-    </div>
-
-    <div class="topbar-right">
-      <a class="btn" href="tips.html">Tips</a>
-      <a class="btn" href="map.html">Maps</a>
-      <!-- keep ONE official wiki button -->
+      <div class="sub" style="margin:0">Wiki</div>
       <a class="btn" href="https://deadpoly.wiki/Main_Page" target="_blank" rel="noopener">Official Wiki ↗</a>
     </div>
   </div>
 
   <div class="wrap">
+    <div>
+      <h1>DeadPoly Wiki (Local)</h1>
+      <div class="sub">Your fast, clean pages (built to match the official tables + images).</div>
+    </div>
 
-    <!-- LEFT -->
-    <aside class="panel">
-      <div class="p-hd">
-        <h2>Wiki Categories</h2>
-        <div class="sub">All links here go to your local pages.</div>
-      </div>
+    <div class="grid">
+      <a class="card" href="helmets.html">
+        <h2>Helmets <span class="arrow">›</span></h2>
+        <p>Official helmet list + thumbnails.</p>
+        <span class="pill">auto-sync</span>
+      </a>
 
-      <div class="acc">
+      <a class="card" href="armor.html">
+        <h2>Armor <span class="arrow">›</span></h2>
+        <p>Body armor table + images.</p>
+        <span class="pill">local data</span>
+      </a>
 
-        <details open>
-          <summary>
-            Official Items
-            <span>+</span>
-          </summary>
-          <div class="acc-body">
-            Local database pages for item categories.
-            <div class="chiprow">
-              <a class="chip" href="helmets.html">Helmets</a>
-              <a class="chip" href="masks.html">Masks</a>
-              <a class="chip" href="weapons.html">Weapons</a>
-              <a class="chip" href="armor.html">Armor</a>
-              <a class="chip" href="ammo.html">Ammo</a>
-              <a class="chip" href="backpacks.html">Backpacks</a>
-              <a class="chip" href="consumables.html">Consumables</a>
-              <a class="chip" href="crafting.html">Crafting</a>
-              <a class="chip" href="collectibles.html">Collectibles</a>
-            </div>
-          </div>
-        </details>
+      <a class="card" href="ammo.html">
+        <h2>Ammo <span class="arrow">›</span></h2>
+        <p>Ammo types + crafting requirements.</p>
+        <span class="pill">local data</span>
+      </a>
 
-        <details>
-          <summary>
-            Maps & Bunkers
-            <span>+</span>
-          </summary>
-          <div class="acc-body">
-            Keep your map pages local too.
-            <div class="chiprow">
-              <a class="chip" href="map.html">Map Hub</a>
-              <a class="chip" href="garden-city.html">Garden City</a>
-              <a class="chip" href="delta.html">Delta</a>
-              <a class="chip" href="bunkers.html">Bunkers (local)</a>
-            </div>
-          </div>
-        </details>
-
-        <details>
-          <summary>
-            Guides
-            <span>+</span>
-          </summary>
-          <div class="acc-body">
-            Your own guides pages.
-            <div class="chiprow">
-              <a class="chip" href="tips.html">Tips & Tricks</a>
-              <a class="chip" href="guides.html">Guides Hub</a>
-              <a class="chip" href="controls.html">Controls</a>
-              <a class="chip" href="patch-notes.html">Patch Notes</a>
-            </div>
-          </div>
-        </details>
-
-      </div>
-    </aside>
-
-    <!-- MAIN -->
-    <main class="main">
-
-      <section class="hero">
-        <h1>DeadPoly Wiki Hub</h1>
-        <p>
-          This hub routes into your own pages (helmets, weapons, etc.). Keep the official wiki as an external reference using the single button in the top-right.
-        </p>
-
-        <div class="searchbar">
-          <input id="q" placeholder="Search your hub (ex: helmets, raid, ammo, delta, bunker)..." />
-          <span class="hint">Filters the tiles below</span>
-        </div>
-      </section>
-
-      <section>
-        <div class="sectionTitle">
-          <h2>Quick Pages</h2>
-          <div class="hint">These are your local pages.</div>
-        </div>
-        <div class="divider"></div>
-
-        <div class="grid" id="tiles" style="margin-top:12px"></div>
-      </section>
-
-    </main>
+      <a class="card" href="backpacks.html">
+        <h2>Backpacks <span class="arrow">›</span></h2>
+        <p>Tier tables + nesting rules + variant images.</p>
+        <span class="pill">local data</span>
+      </a>
+    </div>
   </div>
-
-<script>
-  // Your local hub tiles (edit this list as you add pages)
-  const tiles = [
-    { title:"Helmets", desc:"Head protection / variants", href:"helmets.html", tags:["items","armor"] },
-    { title:"Masks", desc:"Face items / gas masks / cosmetics", href:"masks.html", tags:["items"] },
-    { title:"Weapons", desc:"Melee & firearms", href:"weapons.html", tags:["items","combat"] },
-    { title:"Armor", desc:"Body armor", href:"armor.html", tags:["items","armor"] },
-    { title:"Ammo", desc:"Ammo types & notes", href:"ammo.html", tags:["items","combat"] },
-    { title:"Backpacks", desc:"Carry capacity / storage", href:"backpacks.html", tags:["items","storage"] },
-    { title:"Consumables", desc:"Food / meds / etc.", href:"consumables.html", tags:["items","survival"] },
-    { title:"Crafting", desc:"Stations / recipes / components", href:"crafting.html", tags:["items","craft"] },
-    { title:"Maps", desc:"Map hub + interactive pages", href:"map.html", tags:["map"] },
-    { title:"Bunkers", desc:"Bunker routes / notes (local)", href:"bunkers.html", tags:["map","combat"] },
-    { title:"Guides", desc:"Beginner routes / economy / builds", href:"guides.html", tags:["guides"] },
-  ];
-
-  const tilesEl = document.getElementById("tiles");
-  const qEl = document.getElementById("q");
-
-  function escapeHtml(s){
-    return String(s ?? "").replace(/[&<>"']/g, m => ({
-      "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"
-    }[m]));
-  }
-
-  function render(){
-    const q = qEl.value.trim().toLowerCase();
-    tilesEl.innerHTML = "";
-
-    tiles
-      .filter(t => {
-        if(!q) return true;
-        const hay = `${t.title} ${t.desc} ${(t.tags||[]).join(" ")}`.toLowerCase();
-        return hay.includes(q);
-      })
-      .forEach(t => {
-        const div = document.createElement("div");
-        div.className = "card";
-        div.innerHTML = `
-          <div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap">
-            <h3 style="flex:1">${escapeHtml(t.title)}</h3>
-            ${(t.tags||[]).slice(0,2).map(x => `<span class="badge">${escapeHtml(x)}</span>`).join("")}
-          </div>
-          <p>${escapeHtml(t.desc)}</p>
-          <div class="actions">
-            <a class="smallbtn" href="${t.href}">Open</a>
-          </div>
-        `;
-        tilesEl.appendChild(div);
-      });
-  }
-
-  qEl.addEventListener("input", render);
-  render();
-</script>
 </body>
 </html>
