--- a/ammo.html
+++ b/ammo.html
@@ -1,104 +1,166 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>DeadPoly — Ammo</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>DeadPoly Community Hub — Ammo</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7LNZHQMM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-GD7LNZHQMM');
+  </script>
+
   <style>
-    :root{--bg:#0b0b0f;--panel:#12121a;--panel2:#0f0f16;--line:#2a2a36;--text:#f2f2f2;--muted:#b7b7c2;--btn:#1c1c26;--btnHover:#262638;}
-    html,body{height:100%;margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;}
-    a{color:inherit;text-decoration:none}
-    .topbar{position:sticky;top:0;z-index:999;background:linear-gradient(to bottom, rgba(10,10,14,.92), rgba(10,10,14,.7));backdrop-filter: blur(6px);border-bottom:1px solid var(--line);}
-    .topbar-inner{max-width:1100px;margin:0 auto;padding:10px 14px;display:flex;gap:10px;align-items:center;justify-content:space-between;}
-    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--btn);border:1px solid var(--line);padding:8px 10px;border-radius:10px;transition:background .12s ease, transform .08s ease;}
-    .btn:hover{background:var(--btnHover)} .btn:active{transform:scale(.98)}
-    .wrap{max-width:1100px;margin:0 auto;padding:18px 14px 40px}
-    h1{margin:0;font-size:26px;letter-spacing:.3px}
-    .sub{margin:6px 0 0;color:var(--muted)}
-    .card{margin-top:14px;background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));border:1px solid var(--line);border-radius:16px;padding:14px;}
-    table{width:100%;border-collapse:separate;border-spacing:0;margin-top:8px;overflow:hidden;border-radius:14px;border:1px solid var(--line)}
-    thead th{background:rgba(255,255,255,.03);text-align:left;font-size:12px;color:var(--muted);padding:10px;border-bottom:1px solid var(--line)}
-    tbody td{padding:10px;border-bottom:1px solid rgba(255,255,255,.06);vertical-align:middle}
-    tbody tr:hover{background:rgba(255,255,255,.03)}
-    .thumb{width:52px;height:52px;object-fit:contain;background:rgba(0,0,0,.25);border:1px solid rgba(255,255,255,.08);border-radius:10px}
+    :root{
+      --bg:#0b0b0f; --panel:#14141b; --panel2:#101016;
+      --text:#f2f2f2; --muted:#b7b7c2; --line:#2a2a36;
+      --btn:#1c1c26; --btnHover:#242434;
+      --accent:#ffffff;
+    }
+    html,body{height:100%;margin:0;background:var(--bg);color:var(--text);
+      font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;}
+    a{color:inherit}
+    .topbar{position:sticky;top:0;z-index:999;
+      background:linear-gradient(to bottom, rgba(10,10,14,.92), rgba(10,10,14,.7));
+      backdrop-filter: blur(6px); border-bottom:1px solid var(--line);}
+    .topbar-inner{max-width:1180px;margin:0 auto;padding:10px 14px;
+      display:flex;gap:10px;align-items:center;justify-content:space-between;}
+    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--btn);
+      border:1px solid var(--line); color:var(--text); padding:8px 10px;
+      border-radius:10px; text-decoration:none; transition:transform .08s ease, background .12s ease; user-select:none;}
+    .btn:hover{background:var(--btnHover)}
+    .btn:active{transform:scale(.98)}
+    .wrap{max-width:1180px;margin:0 auto;padding:18px 14px 40px}
+    h1{margin:0 0 6px;font-size:26px;letter-spacing:.3px}
+    .sub{margin:0 0 16px;color:var(--muted)}
+    .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin:12px 0 14px}
+    .search{flex:1;min-width:240px;background:var(--panel);border:1px solid var(--line);
+      border-radius:12px;padding:10px 12px;color:var(--text);outline:none;}
+    .pill{background:var(--panel);border:1px solid var(--line);border-radius:999px;
+      padding:8px 10px;color:var(--text);cursor:pointer;user-select:none;}
+    .pill.active{outline:2px solid #ffffff22}
+    .panel{background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.01));
+      border:1px solid var(--line); border-radius:16px; padding:12px; margin-top:12px;}
+    .panel h2{margin:0 0 10px;font-size:18px}
+    table{width:100%;border-collapse:separate;border-spacing:0}
+    th,td{padding:10px 10px;border-bottom:1px solid var(--line);vertical-align:middle}
+    th{color:#d9d9e6;font-weight:700;text-align:left;font-size:13px;letter-spacing:.2px}
+    tr:hover td{background:rgba(255,255,255,.02)}
+    .imgcell{width:56px}
+    .thumb{width:38px;height:38px;border-radius:10px;object-fit:contain;background:var(--panel2);border:1px solid var(--line)}
     .muted{color:var(--muted)}
-    .pill{display:inline-block;margin-top:10px;padding:6px 10px;border-radius:999px;border:1px solid var(--line);background:var(--panel2);color:var(--muted);font-size:12px}
+    .note{color:var(--muted);font-size:13px;margin-top:10px}
+    .rightlinks{display:flex;gap:10px;align-items:center}
   </style>
 </head>
+
 <body>
   <div class="topbar">
     <div class="topbar-inner">
       <a class="btn" href="wiki.html">← Wiki</a>
-      <div class="sub" style="margin:0">Ammo</div>
-      <a class="btn" href="https://deadpoly.wiki/Ammo" target="_blank" rel="noopener">Official Page ↗</a>
+      <div class="muted">Ammo</div>
+      <div class="rightlinks">
+        <a class="btn" href="https://deadpoly.wiki/Main_Page" target="_blank" rel="noopener">Official Wiki ↗</a>
+      </div>
     </div>
   </div>
 
   <div class="wrap">
-    <div>
-      <h1>Ammo Types</h1>
-      <div class="sub">Remember: Bullet Press is required to craft ammunition.</div>
-      <span class="pill">Local table + official images</span>
+    <h1>Ammo</h1>
+    <div class="sub">Bullet Press required to craft ammunition. Search + filter included.</div>
+
+    <div class="row">
+      <input id="q" class="search" placeholder="Search ammo (ex: 5.56, 9mm, 12ga)..." />
+      <div id="filters"></div>
     </div>
 
-    <div class="card" id="content"></div>
+    <div class="panel">
+      <h2 id="sectionTitle">All</h2>
+      <div style="overflow:auto">
+        <table id="tbl">
+          <thead>
+            <tr>
+              <th class="imgcell"></th>
+              <th>Ammo Type</th>
+              <th>Crafting Requirements</th>
+              <th>Availability</th>
+            </tr>
+          </thead>
+          <tbody id="tb"></tbody>
+        </table>
+      </div>
+      <div class="note">Images are loaded from the official wiki via <span class="muted">Special:FilePath</span>.</div>
+    </div>
   </div>
 
 <script>
-  const ammoAvailable = [
-    {file:"TM_556x45_E.png", type:"5.56x45mm", req:"2x Refined Metal, 2x Gunpowder"},
-    {file:"TM_762x39_E.png", type:"7.62x39mm", req:"2x Refined Metal, 2x Gunpowder"},
-    {file:"TM_9mm_E.png", type:"9mm", req:"1x Refined Metal, 1x Gunpowder"},
-    {file:"TM_12ga_E.png", type:"12Ga", req:"1x Refined Metal, 4x Gunpowder, 4x Plastic"},
+  const OFFICIAL = "https://deadpoly.wiki";
+  const fileUrl = (name) => `${OFFICIAL}/Special:FilePath/${encodeURIComponent(name)}`;
+
+  const rows = [
+    // Available
+    { img:"TM_556x45_E.png", ammo:"5.56x45mm", craft:"2x Refined Metal, 2x Gunpowder", avail:"Available" },
+    { img:"TM_762x39_E.png", ammo:"7.62x39mm", craft:"2x Refined Metal, 2x Gunpowder", avail:"Available" },
+    { img:"TM_9mm_E.png",     ammo:"9mm",       craft:"1x Refined Metal, 1x Gunpowder", avail:"Available" },
+    { img:"TM_12ga_E.png",    ammo:"12Ga",      craft:"1x Refined Metal, 4x Gunpowder, 4x Plastic", avail:"Available" },
+
+    // Unavailable
+    { img:"TM_22lr_E.png",  ammo:".22 LR",  craft:"??", avail:"Unavailable" },
+    { img:"TM_45acp_E.png", ammo:".45 ACP", craft:"??", avail:"Unavailable" },
+    { img:"TM_50bmg_E.png", ammo:".50 BMG", craft:"??", avail:"Unavailable" }
   ];
 
-  const ammoUnavailable = [
-    {file:"TM_22lr_E.png", type:".22 LR", req:"??"},
-    {file:"TM_45acp_E.png", type:".45 ACP", req:"??"},
-    {file:"TM_50bmg_E.png", type:".50 BMG", req:"??"},
-  ];
+  const filtersEl = document.getElementById("filters");
+  const qEl = document.getElementById("q");
+  const tb = document.getElementById("tb");
+  const sectionTitle = document.getElementById("sectionTitle");
 
-  function filePathUrl(filename){
-    return "https://deadpoly.wiki/Special:FilePath/" + encodeURIComponent(filename);
+  let active = "All";
+  const pills = ["All","Available","Unavailable"].map(t => {
+    const b = document.createElement("button");
+    b.className = "pill" + (t===active ? " active":"");
+    b.textContent = t;
+    b.onclick = () => {
+      active = t;
+      [...filtersEl.children].forEach(x => x.classList.remove("active"));
+      b.classList.add("active");
+      render();
+    };
+    filtersEl.appendChild(b);
+    return b;
+  });
+
+  qEl.addEventListener("input", render);
+
+  function render(){
+    const q = qEl.value.trim().toLowerCase();
+    sectionTitle.textContent = active;
+    tb.innerHTML = "";
+
+    rows
+      .filter(r => active==="All" ? true : r.avail===active)
+      .filter(r => !q ? true : (r.ammo + " " + r.craft).toLowerCase().includes(q))
+      .forEach(r => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td class="imgcell"><img class="thumb" src="${fileUrl(r.img)}" alt=""></td>
+          <td><b>${escapeHtml(r.ammo)}</b></td>
+          <td>${escapeHtml(r.craft)}</td>
+          <td class="muted">${escapeHtml(r.avail)}</td>
+        `;
+        tb.appendChild(tr);
+      });
   }
+
   function escapeHtml(s){
     return String(s).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
   }
 
-  const el = document.getElementById("content");
-  el.innerHTML = `
-    <h3 style="margin:0 0 8px">Available</h3>
-    <table>
-      <thead><tr><th style="width:72px">Icon</th><th>Ammo Type</th><th>Crafting Requirements</th></tr></thead>
-      <tbody>
-        ${ammoAvailable.map(a => `
-          <tr>
-            <td><img class="thumb" src="${filePathUrl(a.file)}" alt="${escapeHtml(a.type)}"></td>
-            <td style="font-weight:700">${escapeHtml(a.type)}</td>
-            <td class="muted">${escapeHtml(a.req)}</td>
-          </tr>
-        `).join("")}
-      </tbody>
-    </table>
-
-    <h3 style="margin:18px 0 8px">Unavailable</h3>
-    <table>
-      <thead><tr><th style="width:72px">Icon</th><th>Ammo Type</th><th>Crafting Requirements</th></tr></thead>
-      <tbody>
-        ${ammoUnavailable.map(a => `
-          <tr>
-            <td><img class="thumb" src="${filePathUrl(a.file)}" alt="${escapeHtml(a.type)}"></td>
-            <td style="font-weight:700">${escapeHtml(a.type)}</td>
-            <td class="muted">${escapeHtml(a.req)}</td>
-          </tr>
-        `).join("")}
-      </tbody>
-    </table>
-
-    <div class="muted" style="margin-top:14px">
-      <b>Other:</b> Nails are used as ammunition in the Nail Gun, but are more commonly used for crafting.
-    </div>
-  `;
+  render();
 </script>
 </body>
 </html>
